update version kukariri backbonejs

--- a/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
+++ b/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
@@ -8,3 +8,21 @@ routing:
     provided_dates: "/items/:item_id/types/:type_id/contacts/:contact_id/provided_dates"
     types: "/items/:item_id/types"
     translates: "/translates"
+
+routing_backbonejs:
+  API:
+    contacts:
+      routes:
+        "/items/:item_id/types/:type_id/contacts": "index"
+        "/items/:item_id/types/:type_id/contacts/:id/delete": "destroy"
+        "/items/:item_id/types/:type_id/contacts/:id/edit" : "edit"
+        "/items/:item_id/types/:type_id/contacts/new" : "new"
+        "/contacts/new" : "new_contact"
+        "/contacts" : "index_all"
+        "/contacts/:id/edit" : "edit_all"
+        "/contacts/:id/delete" : "destroy_all"
+    items:
+      routes:
+        "/items/new": "new_item"
+        "/items/:id/edit" : "edit"
+        "/items/:id" : "destroy"
