update version backbonejs kukariri add Carmen implement in backbonejs

--- a/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
+++ b/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
@@ -9,6 +9,7 @@ routing:
     types: "/items/:item_id/types"
     translates: "/translates"
     photos_to_pictures: "/photos_to_pictures"
+    countries: "/countries"
 
 routing_backbonejs:
   API:
