--- a/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
+++ b/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
@@ -8,6 +8,7 @@ routing:
     provided_dates: "/items/:item_id/types/:type_id/contacts/:contact_id/provided_dates"
     types: "/items/:item_id/types"
     translates: "/translates"
+    vcf_to_contacts: "/vcf_to_contacts"
     photos_to_pictures: "/photos_to_pictures"
     countries: "/countries"
 
@@ -28,3 +29,6 @@ routing_backbonejs:
         "/items/new": "new_item"
         "/items/:id/edit" : "edit"
         "/items/:id" : "destroy"
+    vcf_to_contacts:
+      routes: 
+        "/vcf_to_contacts" : "create"
