update version kukariri backbonejs begin export google contacts to kukariri contacts

--- a/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
+++ b/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
@@ -31,3 +31,6 @@ routing_backbonejs:
     vcf_to_contacts:
       routes: 
         "/vcf_to_contacts" : "create"
+    google_contacts_to_contacts:
+      routes:
+        "/google_contacts_to_contacts" : "create"
