--- a/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
+++ b/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
@@ -11,7 +11,7 @@ routing:
     photos_to_pictures: "/photos_to_pictures"
     countries: "/countries"
     google_contacts_to_contacts: "/google_contacts_to_contacts"
-
+    regions: "/countries/:country_name/regions"
 routing_backbonejs:
   API:
     contacts:
