--- a/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
+++ b/app/assets/javascripts/kukariri_backbonejs/routing/routing.yml
@@ -12,6 +12,7 @@ routing:
     countries: "/countries"
     google_contacts_to_contacts: "/google_contacts_to_contacts"
     regions: "/countries/:country_name/regions"
+    friends: "/friends"
 routing_backbonejs:
   API:
     contacts:
